<resources>
    <string name="app_name">CartApp</string>
    <string name="Estado1">Ferrari</string>
    <string name="Estado2">Maserati</string>
    <string name="Estado3">Lamborghini</string>
    <string name="Estado4">Bugatti</string>
    <string name="Estado5">Pagani</string>
    <string name="Estado6">Porsche</string>
    <string name="EstadoSelect">Marcas de Carros:</string>
    <string name="LtFer">Modelos Ferrari</string>
    <string name="LtMas">Modelos Maserati</string>
    <string name="LtLam">Modelos Lamborghini</string>
    <string name="LtBug">Modelos Bugatti</string>
    <string name="LtPag">Modelos Pagani</string>
    <string name="LtPor">Modelos Porsche</string>
    <string name="ModeloCarro01">GTC4 Lusso</string>
    <string name="ModeloCarro02">458</string>
    <string name="ModeloCarro03">F8 Spider</string>
    <string name="ModeloCarro04">296 GTB</string>
    <string name="ModeloCarro05">296 GTB</string>
    <string name="ModeloCarro06">California T</string>
    <string name="ModeloCarro1">MC20</string>
    <string name="ModeloCarro2">ghibli</string>
    <string name="ModeloCarro3">GranCabrio</string>
    <string name="ModeloCarro4">Quattroporte</string>
    <string name="ModeloCarro5">Levante</string>
    <string name="ModeloCarro6">GranTurismo</string>
    <string name="ModeloCarro7">H.Evo Spyder</string>
    <string name="ModeloCarro8">Huracan Evo</string>
    <string name="ModeloCarro9">Sian Roadster</string>
    <string name="ModeloCarro10">Sian FKP 37</string>
    <string name="ModeloCarro11">A.SVJ Roadster</string>
    <string name="ModeloCarro12">A.LP 780-4 U.R</string>
    <string name="ModeloCarro13">B.C.P.S.S.M</string>
    <string name="ModeloCarro14">BCSuper Sport</string>
    <string name="ModeloCarro15">Bugatti Divo</string>
    <string name="ModeloCarro16">BSCSSport300+</string>
    <string name="ModeloCarro17">MaisonPur Sang</string>
    <string name="ModeloCarro18">Bugatti Bolide</string>
    <string name="ModeloCarro19">Zonda R</string>
    <string name="ModeloCarro20">Zonda S7.3</string>
    <string name="ModeloCarro21">Zonda Cinque</string>
    <string name="ModeloCarro22">Huayra Roadster</string>
    <string name="ModeloCarro23">Huayra</string>
    <string name="ModeloCarro24">Zonda Tricolore</string>
    <string name="TipoPokeSin25">718 Cayman T</string>
    <string name="ModeloCarro26">718 Cayman GT4</string>
    <string name="ModeloCarro27">718 Cayman GT4 RS</string>
    <string name="ModeloCarro28">718 Spyder</string>
    <string name="ModeloCarro29">911 GT3</string>
    <string name="ModeloCarro30">718 Boxster T</string>
    <string name="TextoModeloFerrari1">El Ferrari GTC4 Lusso es la última interpretación por parte de Maranello del concepto de Gran Tourer de cuatro plazas. Este vehículo combina un rendimiento extraordinario en todas las condiciones de conducción con elegancia, confort y lujo, tanto para el conductor como para los pasajeros.</string>
    <string name="TextoModeloFerrari2">El Ferrari 458 Italia es más que un digno sucesor del Ferrari F430, un biplaza con tracción trasera y motor central atmosférico de 8 cilindros en V y 578 CV que ha sido diseñado por Pininfarina.</string>
    <string name="TextoModeloFerrari3">The Ferrari F8 Spider is a magical machine, born of competition-inspired Ferraris like the 488 Pista. It features a 3.9-liter twin-turbo V8 that generates 710 hp and 568 lb-ft of torque, all of which is directed to the rear wheels exclusively via a seven-speed dual-clutch automatic transmission.</string>
    <string name="TextoModeloFerrari4">El Ferrari 488 GTB abre un nuevo capítulo en la historia de los ocho cilindros de la marca del Cavallino Rampante. Esta nueva berlinetta aúna a la perfección la experiencia de Ferrari en la F1 y en el WEC (World Endurance Championship), donde el 458 GT mantiene el título de Campeón del Mundo y ha ganado su categoría en las dos últimas ediciones de las 24 horas de Le Mans.</string>
    <string name="TextoModeloFerrari5">El nuevo Ferrari 296 GTB no es el primer Ferrari híbrido de la historia, pero sí el primero que equipa un motor V6 electrificado. La firma de Maranello ha recurrido a esta solución para mejorar tanto las prestaciones como el desempeño de la gama de modelos con motor central. El nuevo 296 GTB es el reemplazo natural del Ferrari F8 Tributo, que equipa un sistema de propulsión convencional con un motor de ocho cilindros en V.</string>
    <string name="TextoModeloFerrari6">El Ferrari California T continua con la elegancia sublime, la deportividad, la versatilidad y la exclusividad que han distinguido a todos los modelos California desde la década de 1950.</string>
    <string name="TextoModeloMaserati1">El MC20 se caracteriza por ofrecer un planteamiento muy deportivo, con un diseño único en la historia del fabricante y con un chasis y propulsor desarrollados de forma específica. El MC20 se fabrica en la planta que posee Maserati en Módena, Italia, su sede central.</string>
    <string name="TextoModeloMaserati2">El Maserati Ghibli diésel es un V6 de 275 CV de potencia y tracción trasera. Los motores de gasolina del Maserati Ghibli son un V6 de 350 CV; un V6 de 430 CV del Ghibli S, que además dispone de tracción total Q4; y un V8 de 580 CV de potencia del Ghibli Trofeo. Maserati Ghibli Trofeo.</string>
    <string name="TextoModeloMaserati3">El compacto y ligero motor V8 de 4,7 litros está montado tanto en el GranCabrio Sport como en el GranCabrio MC, desarrolla 460 CV y 520 Nm de par motor, y alcanza unas impresionantes 7.500 rpm. Las velocidades máximas son 288 km/h para el GranCabrio Sport y 291 km/h para el GranCabrio MC.</string>
    <string name="TextoModeloMaserati4">Su longitud es de 5,26 m, su ancho es de 1,95 m y su altura es de 1,48 m, con una larga batalla de 3.171 mm. Su maletero cubica 530 litros y el peso de su versión más ligera es de 1.935 kg. Su distribución de pesos es perfecta: un 50% del peso descansa en cada eje.</string>
    <string name="TextoModeloMaserati5">El Maserati Levante se caracteriza por ser el primer SUV fabricado por la marca italiana, con capacidad para cinco ocupantes y un planteamiento bastante deportivo en diseño y comportamiento. Se produce en la factoría de Maserati en Turín. El Maserati Levante representa la idea de Maserati sobre los SUV de lujo.</string>
    <string name="TextoModeloMaserati6">En cuanto a sus características, es capaz de entregar 460 CV de potencia a 7.000 rpm, con un par máximo de 520 Nm a 4.750 rpm. Sólo se encuentra asociado a una caja de cambios automática de seis velocidades firmada por el experto alemán ZF con levas detrás del volante.</string>
    <string name="TextoModeloLamborghini1">El Huracán EVO Spyder ha sido diseñado para llevar al extremo el escalofrío de la experiencia de conducción. Colores, aromas y sonidos se funden con un diseño seductor y materiales ultraligeros.Su V10 de 640 CV palpita y ruge con furor, mientras que el solo del tubo de escape superdeportivo silencia cualquier otra cosa. Las líneas aerodinámicas, perfectas y estilizadas, surcan el aire</string>
    <string name="TextoModeloLamborghini2">Huracán EVO es la evolución del V10 de mayor éxito de la Casa Lamborghini. Se trata del resultado de un proceso de perfeccionamiento y consolidación de características ya existentes y, al mismo tiempo, de desarrollo de nuevas soluciones en términos de prestaciones y diseño. Pero lo que lo distingue es su capacidad de anticipar los movimientos y escuchar los deseos de quien lo conduce.</string>
    <string name="TextoModeloLamborghini3">El Sián Roadster es el primer coche superdeportivo Lamborghini híbrido descapotable que emplea, por primera vez en todo el mundo, un supercondensador en solución híbrida y un uso de materiales únicos y ciencia. El cielo que te cubre vibra con el rugido inimitable del V12, el motor más potente de Lamborghini hasta la fecha. Emociones extraordinarias en el camino hacia la electrificación.</string>
    <string name="TextoModeloLamborghini4">Sián FKP 37 es el primer superdeportivo alimentado por un V12 con tecnología híbrida basada en supercondensadores. Potencia, belleza y el motor V12 acoplado a un boost eléctrico dan vida a una joya de ingeniería y tecnología. Sián significa rayo en dialecto boloñés y subraya diferentes aspectos como su velocidad, que sobrepasa los 350 km/h.</string>
    <string name="TextoModeloLamborghini5">Con tan solo 800 unidades fabricadas, SVJ Roadster es el más emblemático de la familia Aventador. La aerodinámica Lamborghini es la más futurista jamás creada: el sistema ALA 2.0 y el aero-vectoring ofrecen la mínima resistencia al avance en las rectas y una insuperable carga aerodinámica en las curvas. El motor aspirado V12 con sus 770 caballos es vertiginoso.</string>
    <string name="TextoModeloLamborghini6">Imagina un superdeportivo en el que las soluciones tecnológicas más avanzadas y el inimitable diseño Aventador se funden con las emociones de una conducción al aire libre. El resultado es una experiencia de pura adrenalina.</string>
    <string name="TextoModeloBugatti1">Bugatti está de celebración. La firma francesa conmemora los 112 años que acumula de historia, una cita tan especial que la marca de los hiperdeportivos ha decidido celebrar estrenando su nueva sección de personalización de «Bugatti Sur Mesure». Y como no podía ser de otra manera, lo ha hecho presentando una primera propuesta sobre el exclusivo Bugatti Chiron Pur Sport.</string>
    <string name="TextoModeloBugatti2">Los de Molsheim, cuya base se encuentra a casi 890 kilómetros, también han trasladado un concesionario móvil, en el que cuentan con todo lo necesario para realizar la configuración de una de las unidades que el cliente desee comprar, una vez probado el Chiron durante una hora. Una instalación en la que no falta de nada, y donde se pueden elegir los colores y materiales del interior como si el cliente hubiera acudido a la sede central.</string>
    <string name="TextoModeloBugatti3">La producción del Bugatti Divo ha llegado a su fin y para celebrarlo la firma francesa ha decidido presentar públicamente el último de los 40 Bugatti Divo fabricados. Una unidad dotada de una configuración estética muy atractiva, que le convierte en todo un ejemplar único.</string>
    <string name="TextoModeloBugatti4">El Bugatti Chiron Super Sport 300+ ya forma parte de la historia de la marca gala, ya que es hasta ahora la variante más rápida desarrollada en Molsheim y uno de los modelos más rápidos de la historia, aunque lo cierto es que dadas las especiales características de las pruebas en las que se midió su velocidad punta, esta no pudo ser homologada y por tanto no es el récord oficial al deportivo más rápido del mundo.</string>
    <string name="TextoModeloBugatti5">Se llama «La Maison Pur Sang», y es el programa más exclusivo de Bugatti. El que certifica la calidad y autenticidad de sus modelos, el que aporta un extra de valor en las subastas. La firma ha otorgado este sello al primer prototipo del Veyron Grand Sport después de una ardua restauración.</string>
    <string name="TextoModeloBugatti6">La firma francesa ha confirmado durante los eventos de la Monterey Car Week el lanzamiento de una edición limitada del Bugatti Bolide, el espectacular y brutal one-off desarrollado específicamente para pista que fue presentado el año pasado. La marca ha decidido fabricar una corta serie de 40 unidades a un precio de 4 millones de euros la pieza.</string>
    <string name="TextoModeloPagani1">No es solo un “superdeportivo”, es el “superdeportivo”. El Zonda R fue diseñado para la pista de carreras y desde la pista de carreras, sin límites. Este superdeportivo está listo para mostrar su carácter de pureza y libertad. Está inspirado en la versión F y es un superdeportivo extremo.</string>
</resources>